# dex-prime

./: .gitignore  Cargo.toml  LICENSE  README.md  code_skeleton.rs
chain_adapter/: Cargo.toml
chain_adapter/src/: adapter_trait.rs  lib.rs  solana.rs  tx.rs
common/: Cargo.toml
common/src/: types.rs
engine/: Cargo.toml
engine/src/: engine.rs  event.rs  execution.rs  lib.rs  matcher.rs  matching.rs  orderbook.rs  types.rs
executor/: Cargo.toml
executor/src/: executor.rs
settlement/: Cargo.toml
settlement/src/: account.rs  funding.rs  lib.rs  liquidation.rs  liquidation_vault.rs  margin.rs  position.rs  settlement.rs
src/: app.rs
